--- a/devops.html
+++ b/devops.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oiCqbfwf'>Internet Brands Careers - DevOps Engineer - Avvo</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oiCqbfwf'>Internet Brands Careers - DevOps Engineer - Avvo</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -194,7 +194,7 @@
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=owkUafwE&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=n2ODlMw5'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=owkUafwE&__jvst=Employee+Referral&__jvsd=sNYIIhwX&__jvsc=Twitter&bid=n2ODlMw5'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -214,7 +214,7 @@
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
+<h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -275,7 +275,7 @@ of?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/3cloud/jobs/4496339002'>Job Application for Azure DevOps Architect at 3Cloud</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/3cloud/jobs/4496339002'>Job Application for Azure DevOps Architect at 3Cloud</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -283,7 +283,7 @@ of?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/57335e9c-db82-4d93-b58d-c4f44d29da4f'>Kyivstar - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kyivstar/57335e9c-db82-4d93-b58d-c4f44d29da4f'>Kyivstar - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -303,7 +303,7 @@ of?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -341,7 +341,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=oyu3afwZ&__jvst=Referral&__jvsd=s2iKPhwF&__jvsc=Twitter&bid=nbsglMwv'>Rackspace Careers - Monitoring DevOps III-2</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=oyu3afwZ&__jvst=Referral&__jvsd=s2iKPhwF&__jvsc=Twitter&bid=nbsglMwv'>Rackspace Careers - Monitoring DevOps III-2</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -365,7 +365,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://taranawireless.applytojob.com/apply/fU3sDaGYCp/Senior-DevOps-Engineer'>Senior DevOps Engineer - Tarana Wireless - Career Page</a></h5> 
+<h5><a href='http://taranawireless.applytojob.com/apply/fU3sDaGYCp/Senior-DevOps-Engineer'>Senior DevOps Engineer - Tarana Wireless - Career Page</a></h5> 
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -409,7 +409,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://formstack.applytojob.com/apply/T77mg5MpKu/DevOps-Engineer'>DevOps Engineer - Formstack - Career Page</a></h5> 
+<h5><a href='https://formstack.applytojob.com/apply/T77mg5MpKu/DevOps-Engineer'>DevOps Engineer - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to DevOps Engineer at Formstack in Krakow, Poland.</p>
 <hr/>
