--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/icertis/31eef823-b754-4902-8deb-18ad301d2d24'>Icertis - Senior Software Engineer - Platform Engineering (Salesforce)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/j2-global/job/olsnbfw5'>J2 Global Careers - Java - Cloud Software Developer - Vipre</a></h5> 
 <p><span class="badge badge-light">Herndon, Virginia  Vancouver Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -91,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/C8vCWtLAPt/Product-Analytics-Developer-Software-Engineer-'>Product Analytics Developer (Software Engineer ) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/C8vCWtLAPt/Product-Analytics-Developer-Software-Engineer-'>Product Analytics Developer (Software Engineer ) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -107,7 +111,7 @@
 <p><span class="badge badge-light">London London  London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -119,7 +123,7 @@
 <p><span class="badge badge-light">Pittsburgh Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=n9wNmMw5'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=n9wNmMw5'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Broomfield, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4497094002'>Job Application for Software Engineer (Mid-level) at OpenTable</a></h5> 
+<h5><a href='https://boards.greenhouse.io/opentable/jobs/4497094002'>Job Application for Software Engineer (Mid-level) at OpenTable</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -175,7 +179,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -215,7 +219,7 @@
 <p><span class="badge badge-light">Redwood City, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bazaarvoice/3b4166cf-6a7b-45a8-9fe8-da0e61c03252'>Bazaarvoice - Senior Back-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bazaarvoice/3b4166cf-6a7b-45a8-9fe8-da0e61c03252'>Bazaarvoice - Senior Back-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -227,7 +231,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1930493'>Job Application for Senior Software Engineer (Pivotal Labs) at Pivotal Software</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pivotalsoftware/jobs/1930493'>Job Application for Senior Software Engineer (Pivotal Labs) at Pivotal Software</a></h5> 
 <p><span class="badge badge-light">Cambridge, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -239,7 +243,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/stacksports/jobs/1936220'>Job Application for Senior Software Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -295,7 +299,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698318514-lead-software-engineering-jr1009722-'>Broadridge Lead Software Engineering (JR1009722) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698318514-lead-software-engineering-jr1009722-'>Broadridge Lead Software Engineering (JR1009722) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -311,7 +315,7 @@
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -425,7 +429,7 @@ looking?...</p>
 <p><span class="badge badge-light">Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiuRafwx&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nfl0lMwc'>ServiceNow Careers - Sr Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiuRafwx&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nfl0lMwc'>ServiceNow Careers - Sr Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -446,10 +450,6 @@ looking?...</p>
 <p>Oct 16, 2019 ... With technologies like XR, AI, machine-learning, and 5G, we're transforming 
 media for tomorrow, too. We're creators and coders, dreamers and doers creating
 ?...</p>
-<hr/>
-<h5><a href='https://assistrcare.join.com/jobs/455116-embedded-software-engineer'>Job @ AssistMe (Berlin): Embedded Software Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
